fixed dp overlapping with navbar and circled dp
The DP overlapping problem was fixed by giving the margin so that the double layer
nav bar in the form of "ul" wouldn't reach the DP's location, that is approx 90px

And the circled DP was achieved by setting the radius property of the image class

The DP was also centered and brought to the top, the flex was removed and the dp
is now put inside another parent class.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,20 +23,28 @@
   padding: 2em 1em 1em;
   margin: 0 auto;
 }
+.dp{
+  align-items: center;
+  margin: auto;
+  text-align: center;
+}
+
+.img{
+  max-width:25%;
+  max-height:25%;
+  margin-top: 100px;
+  display: inline-block;
+  border-radius:50%;
+}
+
 
 article {
   float: right;
   padding: 10px;
   width: 60%;
-  
   height: 300px; 
 }
-.img{
-  float: left;
-  max-width:30%;
-  max-height:30%;
 
-}
 .cmg{
   height: 40%;
   display: grid;
